--- a/less/footer.less
+++ b/less/footer.less
@@ -1,5 +1,8 @@
 .footer {
-    
+    @media @mobile {
+      width: 92.5%;
+      margin: 0px;
+    }
   footer {
     @media @mobile {
       background-color: @footer-color;
@@ -8,6 +11,7 @@
       flex-direction: column;
       padding: 4%;
       border-top: 1px solid #E0E0E0;
+      margin: 0px;
     }
 
     a {
